changed render  by adding view/template for each country

--- a/src/js/views/templates/countries_view_template.html
+++ b/src/js/views/templates/countries_view_template.html
@@ -1,4 +1,4 @@
-<div id="country-list-template">         
+       
     <table class="country-list-table">
         <thead>
             <tr>
@@ -13,20 +13,7 @@
                 <th></th>
             </tr>
        </thead>
-        <tbody >
-            <% _.each(countries, function(country) { %>
-                <tr>
-                    <td><%= country.name %></td>
-                    <td><img width=100 src="<%= country.flag %>"/></td>
-                    <td><%= country.capital %></td>
-                    <td><%= country.latlng %></td>
-                    <td><%= country.population %></td>
-                    <td><%= country.languages[0]["name"] %></td>
-                    <td><%= country.currencies[0]["name"] %></td>
-                    <td><%= country.region %></td>
-                    <td><button class="secondary-btn">Add to my favourites</button></td>
-                </tr>
-            <% }); %>
+        <tbody id="country-list-body">
+         
         </tbody>
     </table>  
-</div>
