--- a/src/js/views/templates/fav_country_view_template.html
+++ b/src/js/views/templates/fav_country_view_template.html
@@ -12,7 +12,7 @@
                 <li>Currency - <span><%= country.currencies[0]["name"] %></span></li>
                 <li>Region - <span><%= country.region %></span></li>
             </ul>
-            <button onclick="$(this).html('&#10003')" class="fav-btn">Add to my favorites</button>
+            <button id= "remBtn" class="rem-btn">Remove from my favorites</button>
     </div>
 
 
