--- a/src/js/views/templates/fav_country_view_template.html
+++ b/src/js/views/templates/fav_country_view_template.html
@@ -12,7 +12,9 @@
                 <li>Currency - <span><%= country.currencies[0]["name"] %></span></li>
                 <li>Region - <span><%= country.region %></span></li>
             </ul>
-            <button id= "remBtn" class="rem-btn">Remove from my favorites</button>
+            <hr>
+            <button id= "remBtn" class="rem-btn">Remove from my favorites</button><br>
+            <a href="https://en.wikipedia.org/wiki/<%= country.name %>" target="_blank">Click to know more via Wiki</a>
     </div>
 
 
