--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -10,6 +10,7 @@
 @btn-shadow:  3px 4px 5px #696969;
 
 body{
+    background: url(images/back.jpg) no-repeat center center fixed; 
     font-family: @font-family;
     background: @background-color;
     font-size:@bigger-font;
@@ -44,7 +45,8 @@ body{
 }
 nav {
     height: 60px;
-    background: rgb(94, 151, 243); // add less function
+    
+    // background: rgb(94, 151, 243); // add less function
 }
 
 #container {
@@ -57,6 +59,19 @@ nav {
 	width:400px;
     font-size: 25px;
     color:@text-color;
+}
+
+#filterTemplate {
+    select {
+        .text-input;
+        width:200px;
+        font-size: 20px;
+    }
+    button {
+        width:80px;
+        height:30px;
+    }
+    margin-left:60%
 }
 
 // table.country-list-table {
@@ -74,12 +89,24 @@ nav {
 
 .country-card {
     width:400px;
-    height:620px;
+    height:660px;
     .border-radius(6px);
     background: white;
     box-shadow: 2px 3px 12px 3px #83878D;
     float:left;
     margin:10px;
+        a {
+            text-decoration: none;
+            font-size:80%;
+            margin-left: 25px;
+            color:#83878D;
+        }
+        hr {
+            border: none;
+            height: 1px;
+            color: @primary-color;
+            background-color:@primary-color;
+        }
 }
 
 .title{
@@ -138,12 +165,12 @@ ul li span {
 
 .nav-btn {
     background: none;
-    color:white;
+    color:#FDFDFB;
     font-size: 120%;
     border:none;
     padding-top:10px;
     padding-bottom:10px;
-    margin-left:40px;
+    margin-left:60px;
     margin-top:10px;
     cursor:pointer;
     &:hover {
