--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -49,6 +49,11 @@ nav {
     // background: rgb(94, 151, 243); // add less function
 }
 
+h1 {
+    margin-left:40%;
+    
+}
+
 #container {
     padding-top:40px;
     padding-left:60px;
@@ -61,7 +66,7 @@ nav {
     color:@text-color;
 }
 
-#filterTemplate {
+#sortTemplate {
     select {
         .text-input;
         width:200px;
