--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -100,6 +100,7 @@ h1 {
             background-color:@primary-color;
         }
         .title{
+            font-size: 105%;
             width:400px;
             float:left;
             img {
